Minor corrections in setup.cfg
Adds download_url in setup.cfg.
Corrects url in setup.cfg.

Change-Id: I7251c82480c0a625723432cdefa3287934ac09ed

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,8 @@ license = Apache License, Version 2.0
 author = Cloudbase Solutions Srl
 author-email = info@cloudbasesolutions.com
 home-page = http://www.cloudbase.it/
-url = https://github.com/cloudbase/neutron-hyperv-agent
+url = https://github.com/cloudbase/networking-hyperv
+download_url = https://github.com/cloudbase/networking-hyperv/tarball/1.0.0
 classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
